android: remove last synced and show file sync status (#1184)
* correctly formatted files

* files that need to be pushed have an icon

* added icons to the right of the file icon

* cleaning up

* deleted forgotten log

* made text disappear for documents need to be pushed

* made description disappear for never synced items

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -18,8 +18,6 @@
     <string name="popup_info_metadata_version">"Metadata Version: "</string>
     <string name="popup_info_content_version">"Content Version: "</string>
 
-    <string name="last_synced">Last synced: %s</string>
-
     <string name="settings_export_account_raw">Copy your account key to clipboard</string>
     <string name="settings_export_account_qr">Export your account key (QR Code)</string>
     <string name="settings_export_account_copied">Account key copied!</string>
@@ -50,7 +48,6 @@
     <string name="settings_preference_title_incremental_sync">Incremental Sync</string>
     <string name="menu_list_files_sort_type">Sort by type</string>
     <string name="qr_code_content_description">QR code</string>
-    <string name="file_image_content_description">File image</string>
 
     <string name="list_files_sync_snackbar">Syncing %s items…</string>
     <string name="list_files_sync_finished_snackbar">Up to date!</string>
@@ -98,6 +95,7 @@
     <string name="document">Document</string>
     <string name="folder">Folder</string>
     <string name="drawing">Drawing</string>
+    <string name="file">File</string>
 
     <string name="create_file_title_folder">New Folder</string>
     <string name="create_file_title_document">New Document</string>
@@ -260,4 +258,6 @@
 
     <string name="sync_finished">Sync finished</string>
     <string name="backup_my_secret">Backup my secret</string>
+    <string name="folder_action">Folder action</string>
+    <string name="document_action">Document action</string>
 </resources>
