fixed weird background color of recent files on access

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -262,4 +262,5 @@
     <string name="document_action">Document action</string>
     <string name="recent_documents">Recent Documents</string>
     <string name="recent_file_icon">Recent file icon</string>
+    <string name="recent_files_folder">%s/</string>
 </resources>
