android: recent files widget (#1185)
* correctly formatted files

* files that need to be pushed have an icon

* added icons to the right of the file icon

* cleaning up

* deleted forgotten log

* made text disappear for documents need to be pushed

* made description disappear for never synced items

* made layouts

* recent files widget works

* fixed file tree bugs

* fixed weird background color of recent files on access

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -260,4 +260,7 @@
     <string name="backup_my_secret">Backup my secret</string>
     <string name="folder_action">Folder action</string>
     <string name="document_action">Document action</string>
+    <string name="recent_documents">Recent Documents</string>
+    <string name="recent_file_icon">Recent file icon</string>
+    <string name="recent_files_folder">%s/</string>
 </resources>
