--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -263,4 +263,5 @@
     <string name="recent_documents">Recent Documents</string>
     <string name="recent_file_icon">Recent file icon</string>
     <string name="recent_files_folder">%s/</string>
+    <string name="search">Search</string>
 </resources>
