--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -263,7 +263,8 @@
     <string name="recent_documents">Recent Documents</string>
     <string name="recent_file_icon">Recent file icon</string>
     <string name="recent_files_folder">%s/</string>
+    <string name="search">Search</string>
+    <string name="no_search_results">No search results</string>
     <string name="exit_app">Exit App</string>
-
     <string name="note">note</string>
 </resources>
