--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -264,4 +264,6 @@
     <string name="recent_file_icon">Recent file icon</string>
     <string name="recent_files_folder">%s/</string>
     <string name="exit_app">Exit App</string>
+
+    <string name="note">note</string>
 </resources>
