--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -178,6 +178,7 @@
     <string name="not_premium">Error, you are not premium.</string>
     <string name="already_canceled">You have already canceled your subscription.</string>
     <string name="usage_is_over_free_tier_data_cap">Your total data usage exceeds free tier. Please remove some data.</string>
+    <string name="retry_sync">Please retry syncing.</string>
 
 
     <string name="unexpected_error">An unexpected error has occurred!</string>
