--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -179,7 +179,10 @@
     <string name="already_canceled">You have already canceled your subscription.</string>
     <string name="usage_is_over_free_tier_data_cap">Your total data usage exceeds free tier. Please remove some data.</string>
     <string name="retry_sync">Please retry syncing.</string>
-
+    <string name="link_in_shared_folder">You cannot create a link in a shared folder.</string>
+    <string name="link_target_is_owned">You cannot create a link to a file you own.</string>
+    <string name="link_target_nonexistent">You cannot link to a file that does not exist.</string>
+    <string name="insufficient_permissions">Error, you have insufficient permissions.</string>
 
     <string name="unexpected_error">An unexpected error has occurred!</string>
     <string name="basic_error">An error has occurred.</string>
