--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -183,6 +183,9 @@
     <string name="link_target_is_owned">You cannot create a link to a file you own.</string>
     <string name="link_target_nonexistent">You cannot link to a file that does not exist.</string>
     <string name="insufficient_permissions">Error, you have insufficient permissions.</string>
+    <string name="cannot_share_root">You cannot share root.</string>
+    <string name="share_already_exists">Error, this file is already shared.</string>
+    <string name="link_in_shared_folder">You cannot have a link in a shared folder.</string>
 
     <string name="unexpected_error">An unexpected error has occurred!</string>
     <string name="basic_error">An error has occurred.</string>
