--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -261,5 +261,7 @@
 
     <string name="running_out_of_space">You are running out of space!</string>
     <string name="out_of_space">You are out of space!</string>
+    <string name="more_info">More info</string>
+    <string name="upgrade_now">Upgrade now</string>
 
 </resources>
