--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -218,6 +218,8 @@
 
     <string name="subscription_info_key">subscription_info</string>
     <string name="premium_key">premium</string>
+    <string name="show_running_out_of_space_0.9_key">running_out_of_space_0.9_key</string>
+    <string name="show_running_out_of_space_0.8_key">running_out_of_space_0.8_key</string>
 
     <!--    Billing-->
 
@@ -257,4 +259,10 @@
     <string name="no_search_results">No search results</string>
     <string name="exit_app">Exit App</string>
     <string name="note">note</string>
+
+    <string name="running_out_of_space">You are running out of space!</string>
+    <string name="out_of_space">You are out of space!</string>
+    <string name="more_info">More info</string>
+    <string name="upgrade_now">Upgrade now</string>
+
 </resources>
