--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -104,6 +104,9 @@
     <string name="settings_open_new_document_automatically">Automatically open new files.</string>
 
     <string name="pdf_page_indicator">%1$d / %2$d</string>
+
+    <string name="drawing_finger_description">Finger drawing</string>
+
     <string name="could_not_load_pdf">This PDF could not be loaded.</string>
 
     <string name="settings_protect_account_biometric_summary">Secure your account with biometrics.</string>
